--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,7 @@
 
+.cs_text_widget img{width: 100px;}
+.cs_site_branding img{width: 70px;}
+.abt-h{font-size: 40px }
 .floating-btn-container {
     position: fixed;
     bottom: 20px;
